2017-02-09  Giacomo Nannicini  <nannicini@us.ibm.com>
	Major changes with the introduction of Numpy and Cython.
	* rbfopt_aux_problems.py (get_min_bump_node, get_bump_new_node):
	These functions are moved to aux_problems from utils, to allow
	faster performance using Cython.
	* rbfopt_utils.pyx, rbfopt_aux_problems.pyx: Hybrid Python/C
	version of these modules. At the moment only the RBF functions are
	written in real C, but this already makes a difference.
	* setup.py: Created, for automatic compilation in Cython.
	
2016-10-02  Giacomo Nannicini  <nannicini@us.ibm.com>
	* rbfopt_cl_interface.py (register_options): Options are now
	grouped into Algorithmic settings and Execution settings.
	* rbfopt_cl_interface.py (rbfopt_cl_interface): Added option to
	read initialization points from file.
	* rbfopt_algorithm.py (restart): Now adds user-provided points to
	the initial sample. It is no longer possible to provide a full
	initial sample to the algorithm, and employ user-provided points
	instead of the generated sample.
	
2016-07-25  Giacomo Nannicini  <nannicini@us.ibm.com>
	Version 2.0 released.
	* rbfopt_aux_problems.py (global_search, pure_global_search):
	Restructured to allow for 'genetic', 'sampling' and 'solver'
	solution methods..
	* rbfopt_aux_problem.py (MetricSRSMObj): The option
	modified_msrsm_score now determines the weight for the objective
	function component of the score: the classical MSRSM is obtained
	setting it to False, the default is True.

2016-07-20  Giacomo Nannicini  <nannicini@us.ibm.com>
	Removed the possibility of setting integer_vars to None. It now
	has to be empty if there are no integer variables.
	The argument integer_vars now always appears immediately after
	var_upper.
	* rbfopt_algorithm.py (__init__): Resolved a bug in handling fixed
	variables with integer variables.
	* rbfopt_aux_algorithm.py (GutmannHkObj): Improved numerical
	stability of formulas.

2016-07-19  Giacomo Nannicini  <nannicini@us.ibm.com>