@@ -1268,7 +1268,6 @@ class nvs15:
         # - x[0] - x[1] - 2*x[2] + 3 >= 0
         penalty = 0.0
         penalty += 10*max(0, -(-x[0] - x[1] - 2*x[2] + 3))
-        print(penalty)
         return(value + penalty)
 
     dimension = 3
